crates/dag-macros/tests/ui/workflow_spill_invalid_key.stderr
error: spill! requires `tier = "..."`
  --> tests/ui/workflow_spill_invalid_key.rs:41:29
   |
41 |     spill!(trigger -> sink, bucket = "local");
   |                             ^^^^^^
